Finished orders's page and added bootstrap
- Added allOrdersController.js
- Added the delete function in customersController.js
- Deleted customersControllerWithAs.js
- Added getOrders(), deleteCustomer() function in customersFactory.js
- Added Bootstrap to all of html
- Added the function that support the factory in server.js for running
NodeJS

--- a/app/views/orders.html
+++ b/app/views/orders.html
@@ -1,5 +1,5 @@
 <h2>{{ customer.name }}'s Orders</h2>
-<table>
+<table class="table table-striped">
     <tr>
         <th>Product</th>
         <th>Total</th>
@@ -8,4 +8,4 @@
         <td>{{ order.product }}</td>
         <td>{{ order.total | currency }}</td>
     </tr>
-</table>
+</table> 
