--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,9 @@
 .navy {
 	color: navy;
 }
+.delete {
+    color: red;
+}
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
